Fixed: Images wont align correctly on smaller devices.

--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@
 
 .img-fluid {
     border-radius: 6px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .grid-item:hover {
@@ -35,4 +38,8 @@
 
 .container {
     margin-top: 10px;
+}
+
+#platzhalter {
+    margin-bottom: 400px;
 }
